--- a/client.conf
+++ b/client.conf
@@ -5,7 +5,7 @@ client
 dev tun
 
 # Протокол
-proto udp
+proto tcp-client
 
 # Адрес и порт сервера!!!
 #remote <IP or Domain Name>
@@ -16,8 +16,6 @@ resolv-retry infinite
 
 # Режим тлс-клиента
 tls-client
-# Защита от «man in the middle» атаки
-ns-cert-type server
 # Защищает от подмены сервера третьим лицом
 remote-cert-tls server
 
@@ -27,6 +25,8 @@ ca ca.crt
 # Ключь и сертификат клиента!!!
 cert client5.crt
 key client5.key
+# Не кешировать пароли в памяти
+auth-nocache
 
 # Включаем фрагментацию пакетов
 #fragment 1300
@@ -35,7 +35,6 @@ key client5.key
 # в случае если в течении 300 секунд не будет ответа, 
 # разрывать соединени
 keepalive 10 300
-
 
 # Не перечитывать ключи после получения SIGUSR1 или ping-restart
 persist-key
