--- a/client.conf
+++ b/client.conf
@@ -27,6 +27,8 @@ cert client5.crt
 key client5.key
 # Не кешировать пароли в памяти
 auth-nocache
+# Увеличить блок шифрования
+cipher AES-256-CBC
 
 # Включаем фрагментацию пакетов
 #fragment 1300
